<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/grey_light">

    <ImageButton
        android:id="@+id/setting"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_setting"
        android:contentDescription="@string/parametres" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_call_answer_video"
        android:contentDescription="@string/down_menu_new_conv"/>

    <ImageButton
        android:id="@+id/home_chat"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_chat"
        android:contentDescription="@string/down_menu_chat"/>

    <ImageButton
        android:id="@+id/home_logout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_logout"
        android:contentDescription="@string/home_logout"/>

</LinearLayout>